# substack-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  substack_mcp.py
examples/: example_queries.md
