[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substack-mcp"
version = "0.1.0"
description = "An MCP (Model Context Protocol) server for Substack API integration with Claude and other AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Greg-Swiftomatic", email = "contact.swiftomatic@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "substack-api>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Greg-Swiftomatic/substack-mcp"
Issues = "https://github.com/Greg-Swiftomatic/substack-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["substack_mcp.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
